--- a/src/main/index.html
+++ b/src/main/index.html
@@ -8,7 +8,6 @@
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="web-app/css/chessboard-0.3.0.min.css">
     <link rel="stylesheet" href="web-app/css/main.css">
   </head>
   <body vocab="http://schema.org/">
@@ -36,11 +35,11 @@
 
       <div id="content" class="row justify-content-center align-items-center">
         <div id="chat-options" class="col-6 text-center">
-          <button id="new-btn" type="button" class="btn btn-dark btn-lg"> New game</button>
-          <button id="join-btn" type="button" class="btn btn-dark btn-lg">Join game</button>
+          <button id="new-btn" type="button" class="btn btn-dark btn-lg"> New chat</button>
+          <button id="join-btn" type="button" class="btn btn-dark btn-lg">Join chat</button>
         </div>
 
-        <div id="new-game-options" class="col-6 hidden">
+        <div id="new-chat-options" class="col-6 hidden">
           <form>
             <div class="form-group">
               <label for="chat-name">Chat name</label>
