Index.html updated

--- a/src/main/index.html
+++ b/src/main/index.html
@@ -55,9 +55,10 @@
               <input type="text" class="form-control rounded-0" id="data-url" aria-describedby="pathHelp" placeholder="Enter path">
               <small id="pathHelp" class="form-text">This is the path of the file on your Solid POD where your personal chat data will be stored. Data will be appended if the file exists.</small>
             </div>
-            
+            <div>
             <button id="start-new-chat-btn" type="button" class="btn btn-dark">Start!</button>
             <button type="button" class="btn-cancel btn btn-dark">Cancel</button>
+            </div>
           </form>
         </div>
 
