--- a/src/main/index.html
+++ b/src/main/index.html
@@ -46,7 +46,7 @@
               <input type="text" class="form-control rounded-0" id="chat-name" placeholder="Enter the chat's name">
             </div>
             <div class="form-group">
-              <label for="possible-opps">Your opponent</label>
+              <label for="possible-opps">Your friend</label>
               <!-- <input type="text" class="form-control rounded-0" id="opp-webid" placeholder="Enter opponent's WebID" value="https://ph2.solid.community/profile/card#me"> -->
               <select id="possible-opps"></select>
             </div>
