Index.html updated

--- a/src/main/index.html
+++ b/src/main/index.html
@@ -92,7 +92,7 @@
         <div id="chat" class="hidden" >
           <p>Friend: <span id="opponent-name"></span></p>
           <div id="chat-area" style="width: 400px">
-            <textarea id="messages" rows="32" cols="60"></textarea>
+            <textarea id="messages" rows="32" cols="60" disabled></textarea>
             </div>
           <div id="chat-details">
             <input type="text" class="form-control rounded-0" id="message" placeholder="Write your message...">
