--- a/src/main/index.html
+++ b/src/main/index.html
@@ -46,9 +46,9 @@
               <input type="text" class="form-control rounded-0" id="chat-name" placeholder="Enter the chat's name">
             </div>
             <div class="form-group">
-              <label for="possible-opps">Your friend</label>
+              <label for="possible-friends">Your friend</label>
               <!-- <input type="text" class="form-control rounded-0" id="opp-webid" placeholder="Enter opponent's WebID" value="https://ph2.solid.community/profile/card#me"> -->
-              <select id="possible-opps"></select>
+              <select id="possible-friends"></select>
             </div>
             <div class="form-group">
               <label for="data-url">Path on your POD to store the chat</label>
