Loader and semanticChat

--- a/src/main/index.html
+++ b/src/main/index.html
@@ -92,13 +92,13 @@
         <div id="chat" class="hidden" >
           <p>Friend: <span id="opponent-name"></span></p>
           <div id="chat-area" style="width: 400px">
-            <textarea id="messages" rows="32" cols="60" disabled></textarea>
+            <textarea id="messages" rows="20" cols="60" disabled></textarea>
             </div>
           <div id="chat-details">
             <input type="text" class="form-control rounded-0" id="message" placeholder="Write your message...">
 		    <button id="write-chat" type="button" class="btn btn-dark">Send</button>
+            <button id="stop-playing" type="button" class="btn btn-dark">Stop chat</button>
           </div>
-          <button id="stop-playing" type="button" class="btn btn-dark">Stop</button>
         </div>
       </div>
 
