Index.html and .jd fixed

--- a/src/index.html
+++ b/src/index.html
@@ -90,7 +90,7 @@
         </div>
 
         <div id="chat" class="hidden" >
-          <p>Friend: <span id="opponent-name"></span></p>
+          <p>Friend: <span id="friend-name"></span></p>
           <div id="chat-area" style="width: 400px">
             <textarea id="messages" rows="20" cols="60" disabled></textarea>
             </div>
