--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           <div id="chat-details">
             <input type="text" class="form-control rounded-0" id="message" placeholder="Write your message...">
 		    <button id="write-chat" type="button" class="btn btn-dark">Send</button>
-            <button id="stop-chating" type="button" class="btn btn-dark">Stop chat</button>
+            <button id="stop-chating" type="button" class="btn btn-dark">Leave chat</button>
           </div>
         </div>
       </div>
@@ -162,10 +162,10 @@
         <div class="modal-dialog" role="document">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel6">Opponent has quit</h5>
+              <h5 class="modal-title" id="exampleModalLabel6">Friend has quit</h5>
             </div>
             <div class="modal-body">
-              Your opponent has quit the chat.
+              Your friend has quit the chat.
             </div>
             <div class="modal-footer">
               <button id="opp-quit-ok-btn" type="button" class="btn btn-dark">ok</button>
