Leave chat button fixed

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           <div id="chat-details">
             <input type="text" class="form-control rounded-0" id="message" placeholder="Write your message...">
 		    <button id="write-chat" type="button" class="btn btn-dark">Send</button>
-            <button id="stop-chating" type="button" class="btn btn-dark">Leave chat</button>
+            <button id="stop-chatting" type="button" class="btn btn-dark">Leave chat</button>
           </div>
         </div>
       </div>
