--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Solid Chat</title>
+    <title>DeChat</title>
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -13,7 +13,7 @@
   <body vocab="http://schema.org/">
     <div class="container">
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <span class="navbar-brand"><i class="fas fa-chess"></i>&nbsp;&nbsp;Solid Chat</span>
+        <span class="navbar-brand"><img src="/web-app/img/logo.png" alt="DeChates3B" height="65" width="165"></span>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -86,9 +86,12 @@
             </div>
           <div id="chat-details">
             <input type="text" class="form-control rounded-0" id="message" placeholder="Write your message...">
-		    <button id="write-chat" type="button" class="btn btn-dark">Send</button>
-            <button id="stop-chatting" type="button" class="btn btn-dark">Leave chat</button>
+		    <button id="write-chat" type="button" class="btn btn-dark"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+            width="26" height="26"
+            viewBox="0 0 224 224"
+            style=" fill:#000000;"><g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><path d="M0,224v-224h224v224z" fill="none"></path><g fill="#ffffff"><g id="surface1"><path d="M0,17.23077v73.23077l129.23077,21.53846l-129.23077,21.53846v73.23077l224,-94.76923z"></path></g></g></g></svg></button>
           </div>
+            <button id="stop-chatting" type="button" class="btn btn-dark">Leave chat</button>
         </div>
       </div>
 
