--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 
 <body id="page-top">
-<div id="principal">
+<div id="principalScreen">
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
     <div class="container">
@@ -124,7 +124,6 @@
             </div>
             <div>
             <button id="start-new-chat-btn" type="button" class="btn btn-outline-light">Start!</button>
-            <button id="btn-cancel" type="button" class="btn btn-outline-light">Cancel</button>
             </div>
           </form>
         </div>
@@ -170,8 +169,8 @@
               Please login to chat.
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-              <button id="login-btn" type="button" class="login-btn btn btn-dark">Login</button>
+                <button id="login-btn" type="button" class="login-btn btn btn-dark">Login</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
             </div>
           </div>
         </div>
