Load friends correct

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <hr class="divider my-4">
         </div>
         <div class="col-lg-8 align-self-baseline">
-          <a class="btn btn-primary btn-xl js-scroll-trigger" id="new-btn">Chat</a>
+          <a class="btn btn-primary btn-xl js-scroll-trigger" id="login-btn">Chat</a>
         </div>
       </div>
     </div>
