--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
   <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
     <div class="container">
         <div class="btn-group">
-        <button type="button" id="clear-inbox" class="btn btn-outline-warning">Clear inbox</button>
-        <button type="button" id="logout-btn" class="btn btn-outline-warning">Logout</button>
+        <button type="button" id="clear-inbox" class="btn btn-outline-primary">Clear inbox</button>
+        <button type="button" id="logout-btn" class="btn btn-outline-primary">Logout</button>
         </div>
     </div>
   </nav>
@@ -138,7 +138,7 @@
               <div class="input-group mb-3">
                 <input type="text" class="form-control rounded-0" id="message" placeholder="Write your message...">
                 <div class="input-group-append">
-                <button id="write-chat" class="btn btn-warning" type="button"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+                <button id="write-chat" class="btn btn-primary" type="button"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
             width="20" height="20"
             viewBox="0 0 224 224"
             style=" fill:#000000;"><g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><path d="M0,224v-224h224v224z" fill="none"></path><g fill="#ffffff"><g id="surface1"><path d="M0,17.23077v73.23077l129.23077,21.53846l-129.23077,21.53846v73.23077l224,-94.76923z"></path></g></g></g></svg></button>
