--- a/index.html
+++ b/index.html
@@ -106,12 +106,19 @@
     
     <div id="chatScreen" style="display: none;">
         <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
+        <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
     <div class="container">
-        <div class="btn-group">
-        <button type="button" id="clear-inbox" class="btn btn-outline-primary">Clear inbox</button>
-        <button type="button" id="logout-btn" class="btn btn-outline-primary">Logout</button>
-        </div>
+        <span><img src="web-app/img/logo.png" alt="DeChates3B" height="65" width="165"></span>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto my-2 my-lg-0">
+        <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" id="clear-inbox" href="#">Clear inbox</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" id="logout-btn" href="#">Logout</a>
+          </li>
+        </ul>
+      </div>
     </div>
   </nav>
 
