--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="col-lg-8 text-center">
           <h2 class="text-white mt-0">Help</h2>
           <hr class="divider light my-4">
-            <p class="text-white mb-4">To use the application you need a <a class="text-white mb-4" href=https://solid.inrupt.com/get-a-solid-pod >Solid POD</a>. If you already have it, you only have to click in CHAT and log in with your Solid account. You will see the chat with all your friends, click on the one you want and start chatting!</p>
+          <p class="text-white-50 mb-4">Proximamente!</p>
         </div>
       </div>
     </div>
@@ -81,7 +81,7 @@
       <div class="row">
           <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
-            <p>DeChat is a decentralized chat application, build on top of Solid. Our information is not stored on a server but is stored on our POD.</p>
+            <p>DeChat is a decentralized chat application, build on top of Solid. The purpose of using this technology is that all our information is not stored on a server but is stored on our POD.</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
